# BlackHatProgramming

./: README.md  go.mod  go.sum  notes.org
.github/workflows/: main.yaml
AmsiBypass/: Program.fs
BlackHatGo/: go.mod  go.sum
BlackHatGo/03.httpclients/debruijn/: debruijin.go
BlackHatGo/04.httpservers/: go.mod  main.go
BlackHatGo/05.templates/: go.mod  main.go
BlackHatGo/06.credharvest/: go.mod  main.go
BlackHatGo/06.credharvest/kube/: pod.yaml
BlackHatGo/07.keylogger/: form.html  logger.js  main.go
BlackHatGo/08.reverseproxy/: main.go
BlackHatGo/09.DNS/: main.go
BlackHatGo/09.DNS/client/: client.go
BlackHatGo/10.DNSServer/: go.mod  main.go
BlackHatGo/11.SMB/: BinaryMarshall.go  go.mod
BlackHatGo/Chisel/: client.go  server.go
BlackHatGo/Chisel/client/: client.go  client_connect.go  client_test.go
BlackHatGo/PKI/: main.go
BlackHatGo/REST/C/: CMakeLists.txt
BlackHatGo/gocat/: main.go
BlackHatGo/malware/basic/: go.mod  (+1 more)
BlackHatGo/oddproxy/: client.go  main.go  server.go
BlackHatGo/proxy/: gofuncproxy.go  goproxy.go
BlackHatGo/python/: main.go
BlackHatGo/socks5/: socks5.go
BlackHatGo/tcpforwarder/: main.go
BlackHatGo/vpn/: Dockerfile  main.go
BlackHell/JsonParser/: main.hs
Blackell/basics/: basics.hs
BlakHatNet/base/: simple-example.cs
GRPC_Reverse/: CMakeLists.txt
GRPC_Reverse/client/: go.mod  main.go
GRPC_Reverse/cpp_reversepb/: coms.pb.cc  coms.pb.h
GRPC_Reverse/cpp_src/: main.cpp
GRPC_Reverse/protobuf/: coms.proto
GRPC_Reverse/protobuff/: coms.proto
GRPC_Reverse/reversepb/: coms_grpc.pb.go
GRPC_Reverse/server/: go.mod  main.go
GRPC_Reverse/server/reversepb/: coms.pb.go  coms_grpc.pb.go
GrayHatC#/FuzzXXSSQL/: makefile
GrayHatF#/FuzzXXSQL/: Program.fs
GrayHatG#/FuzzXXSQL/: Program.fs
NTLM/: CMakeLists.txt
NTLM/.cache/clangd/index/: args.c.0F0148B68E4189EB.idx  args.c.30C629C987010CBE.idx  args.h.749563AC49F5DC9E.idx  args.h.F241E096792589E7.idx  main.c.790F1D0F086B3033.idx  main.c.9E440015ADAC252F.idx  main.cpp.1B1C60516A91C19D.idx  main.cpp.73C860ADC76A5999.idx  request.c.598AAACED997DA8A.idx  request.c.CF8FB7533F114043.idx  request.h.33D38DB5282F0685.idx  request.h.FB37D7BC329AA833.idx
NTLM/src/: args.c  args.h  main.c  main.cpp  request.c  request.h
NTLM/tests/: ntmltest.c
REST/: README.md
REST/C/: CMakeLists.txt  compile_commands.json
REST/C/.cache/clangd/index/: main.c.CE12925374D4C330.idx  mongoose.c.9AF66B9F3F964B63.idx  mongoose.h.74699F335A43225D.idx  webserver.c.866DB29965FF4453.idx  webserver.h.80EA93787A6FA035.idx
REST/C/src/: main.c  webserver.c  webserver.h
REST/C/src/middleware/: middleware.c  middleware.h
REST/C/src/middlewre/: middleware.c  middleware.h
REST/C/tests/: middleware_tests.c
REST/GO/: go.mod  go.sum  gulpfile.js  main.go  main_test.go
ui/NCURSES/snake/: CMakeLists.txt
ui/NCURSES/snake/.cache/clangd/index/: fruit.cpp.B0ECB53B52D67937.idx  fruit.h.0A1C02348FB76C4C.idx  main.c.1D50B15A9A547006.idx  main.cpp.43986BAFC4CBF80A.idx  main.cpp.EA03C837D992AE56.idx  screen.cpp.70F738ADFF47FE0B.idx  screen.cpp.DD4B397C9668C5AA.idx  screen.h.48D8772CC2DFE6AA.idx  screen.h.B38501229BD1A842.idx  snake.cpp.92740B03B8095000.idx  snake.cpp.BBA8BF8536AA970F.idx  snake.h.6861D34E0FFE91E0.idx  snake.h.CF1B05D4A72268C3.idx
ui/NCURSES/snake/src/: fruit.cpp  fruit.h  main.c  main.cpp  screen.cpp  screen.h  snake.cpp  snake.h
ui/electron/: grpc
(+68 files in other folders)
